--- a/.github/workflows/linux-benchmarks-trigger.yml
+++ b/.github/workflows/linux-benchmarks-trigger.yml
@@ -13,13 +13,20 @@ jobs:
 
   triggerWinIntegration:
     if: github.repository == 'containerd/containerd'
-    # NOTE(aznashwan, 11/24/21): GitHub actions do not currently support referencing
+    # NOTE(aznashwan, 6/6/2022): GitHub actions do not currently support referencing
     # or evaluating any kind of variables in the `uses` clause, but this will
     # ideally be added in the future in which case the hardcoded reference to the
     # upstream containerd repository should be replaced with the following to
     # potentially allow contributors to enable periodic benchmarks on forks as well:
     # uses: "${{ github.repository }}/.github/workflows/linux-benchmarks.yml@${{ github.ref_name }}"
     uses: containerd/containerd/.github/workflows/linux-benchmarks.yml@main
+    with:
+      containersNumber: 500
+      containersNumberParallel: 1
+      imagesNumber: 500
+      imagesNumberParallel: 1
+      podsNumber: 500
+      podsNumberParallel: 1
     secrets:
       AZURE_SUB_ID: "${{ secrets.AZURE_SUB_ID }}"
       AZURE_CREDS: "${{ secrets.AZURE_CREDS }}"
