--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -58,8 +58,6 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          # FIXME: go-fuzz fails with Go 1.20: `cgo_unix_cgo_res.cgo2.c:(.text+0x32): undefined reference to `__res_search'`
-          # https://github.com/containerd/containerd/pull/8103#issuecomment-1429256152
-          go-version: 1.18
+          go-version: 1.21.x
       - uses: actions/checkout@v3
       - run: script/go-test-fuzz.sh
