CI: Fix Windows critest report dir path.
The previous implementation in the `CI` workflow would have `critest` generate
reports in a directory named `critestresport` which never got uploaded.

This patch changes said output dir path to `report` as is used in the Linux jobs.

Signed-off-by: Nashwan Azhari <nazhari@cloudbasesolutions.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -383,7 +383,7 @@ jobs:
           {
             $skip = "-ginkgo.skip=runtime should support exec with tty=true and stdin=true"
           }
-          critest.exe --runtime-endpoint=npipe://.//pipe//containerd-containerd --test-images-file='${{env.CRI_TEST_IMAGES}}' --report-dir='${{github.workspace}}/critestreport' $skip
+          critest.exe --runtime-endpoint=npipe://.//pipe//containerd-containerd --test-images-file='${{env.CRI_TEST_IMAGES}}' --report-dir='${{github.workspace}}/report' $skip
 
       - uses: actions/upload-artifact@v3
         if: always()
